--- a/index.html
+++ b/index.html
@@ -4,30 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>V de Vendetta</title>
+    <title>Mojito</title>
     <link rel="stylesheet" href="/fonts/Gotham-Medium.otf" type="font/opentype">
     <link rel="stylesheet" href="/styles.css">
-
 </head>
 
 <body>
-    <img class="logo" src="/images/logo-center.png">
-    <p class="title">Prepara un mojito y consigue un regalo en el PRIMAVERA SOUND</p>
-
-    <div class="info">
-        <p class="info-text">Arrástralo</p>
-        <img class="info-arrow" src="/images/flecha-cursor.png">
-    </div>
-    <div class="game">
-        <div class="game-left">
+    <header>
+        <img class="logo" src="/images/logo-center.png">
+        <p class="title">Prepara un mojito y consigue un regalo en el PRIMAVERA SOUND</p>
+    </header>
+    <main>
+        <div class="info">
+            <p class="info-text">Arrástralo</p>
+            <img class="info-arrow" src="/images/flecha-cursor.png">
         </div>
-        <div class="game-right">
-            <img class="img-right" src="images/vaso-center.png">
+        <div class="game">
+            <div class="game-left">
+            </div>
+            <div class="game-right">
+                <img class="img-right" src="images/vaso-center.png">
+            </div>
         </div>
-    </div>
+    </main>
     <footer class="footer">
     </footer>
-
     <script src="main.js"></script>
 </body>
 
