Add  glass lights animation

--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
             </div>
             <div class="game-right">
                 <img class="img-right" src="images/vaso-center.png">
+                <!--   <img class="light1-right" src="images/destello1.png">
+                <img class="light2-right" src="images/destello2.png"> -->
             </div>
         </div>
     </main>
     <footer class="footer">
     </footer>
+
     <script src="main.js"></script>
 </body>
 
